[package]
name = "scrolls-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
pallas-addresses = "0.19.0-alpha.0"
redis = "0.23.0"

serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.2.0"
serde_json = "1.0"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
